--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Concerto — Festivals</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css" />
+</head>
+<body>
+  <header class="topbar">
+    <div class="topbar-inner">
+      <div class="brand">
+        <div class="brand-kicker">CONCERTO</div>
+        <div class="brand-title">FESTIVALS</div>
+      </div>
 
+      <div class="topbar-actions">
+        <a class="ghost-btn" href="#" id="openHelp">How it works</a>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="hero">
+      <h1 class="h1">Find your festival. Plan the whole weekend.</h1>
+      <p class="sub">Search by name, city, or genre — then tap into tickets, city plans, and festival-day strategy.</p>
+
+      <div class="search-row">
+        <div class="search">
+          <input id="q" type="search" placeholder="Search festivals (ex: Coachella, Miami, EDM)..." autocomplete="off" />
+          <button id="clearBtn" class="icon-btn" title="Clear" aria-label="Clear">×</button>
+        </div>
+
+        <select id="month" class="select">
+          <option value="all">All months</option>
+        </select>
+
+        <select id="genre" class="select">
+          <option value="all">All genres</option>
+        </select>
+      </div>
+
+      <div class="chips" id="quickChips">
+        <!-- quick chips injected -->
+      </div>
+    </section>
+
+    <section class="grid-wrap">
+      <div class="grid-head">
+        <div class="muted" id="countLabel">Loading festivals…</div>
+        <div class="right">
+          <button class="pill-btn" id="sortBtn" data-sort="soonest">Sort: Soonest</button>
+        </div>
+      </div>
+
+      <div class="grid" id="grid"></div>
+
+      <div class="empty" id="emptyState" hidden>
+        <div class="empty-title">No matches.</div>
+        <div class="empty-sub">Try a different search, month, or genre.</div>
+      </div>
+    </section>
+  </main>
+
+  <div class="modal" id="modal" hidden>
+    <div class="modal-backdrop" id="modalClose"></div>
+    <div class="modal-card">
+      <div class="modal-title">How Festivals works</div>
+      <div class="modal-body">
+        <ul class="bullets">
+          <li>Browse or search festivals.</li>
+          <li>Tap a festival card to open the details page.</li>
+          <li>Use the buttons to jump to tickets and planning tools.</li>
+          <li>We’ll connect this to Concerto’s City Guides + AI itineraries next.</li>
+        </ul>
+      </div>
+      <div class="modal-actions">
+        <button class="primary-btn" id="modalOk">Got it</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="assets/js/app.js"></script>
+</body>
+</html>
