--- a/festival.html
+++ b/festival.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
-<body>
+<body class="fest-dark">
   <header class="topbar">
     <div class="topbar-inner">
       <a class="ghost-btn" href="index.html">← Back</a>
