--- a/festival.html
+++ b/festival.html
@@ -165,6 +165,30 @@
     </section>
   </main>
 
+    <!-- AI Planner Modal -->
+  <div class="modal" id="aiModal" hidden>
+    <div class="modal-backdrop" data-close="1"></div>
+
+    <div class="modal-card">
+      <div class="modal-title">Plan with AI</div>
+
+      <div class="modal-body">
+        <div style="display:grid;gap:10px;margin-top:10px">
+          <input id="aiVibe" class="select" placeholder="Vibe (chill, rage, foodie, etc.)" />
+          <input id="aiBudget" class="select" placeholder="Budget (low / mid / high)" />
+          <input id="aiMustSee" class="select" placeholder="Must-see artists (comma-separated)" />
+        </div>
+
+        <div style="display:flex;gap:10px;justify-content:flex-end;margin-top:14px">
+          <button class="ghost-btn" id="aiCancel" type="button">Cancel</button>
+          <button class="primary-btn" id="aiGenerate" type="button">Generate</button>
+        </div>
+
+        <div id="aiResult" style="margin-top:14px"></div>
+      </div>
+    </div>
+  </div>
+
   <script src="assets/js/festival.js"></script>
 </body>
 </html>
