--- a/festival.html
+++ b/festival.html
@@ -44,7 +44,7 @@
         <div class="detail-actions">
           <a class="primary-btn" id="ticketsBtn" href="#" target="_blank" rel="noopener">Tickets</a>
           <a class="pill-btn" id="cityGuideBtn" href="#" target="_blank" rel="noopener">City Guide</a>
-          <a class="pill-btn" id="aiBtn" href="#" target="_blank" rel="noopener">Plan with AI</a>
+          <a class="pill-btn" id="aiBtn" href="#">Plan with AI</a>
         </div>
 
         <div class="detail-grid">
