Refactor header structure and update branding

--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
-  <header class="topbar">
-    <div class="topbar-inner">
-      <div class="brand">
-        <div class="brand-kicker">CONCERTO</div>
-        <div class="brand-title">FESTIVALS</div>
-      </div>
+<header class="page-header">
+  <div class="page-header-inner">
+    <img
+      src="IMG_3180.jpeg"
+      alt="Concerto - From the Concert to the City"
+      class="brand-logo"
+    />
 
-      <div class="topbar-actions">
-        <a class="ghost-btn" href="#" id="openHelp">How it works</a>
-      </div>
+    <h1 class="feature-title">Festivals</h1>
+    <p class="tagline">
+      Find your festival. Plan the whole weekend.
+    </p>
+
+    <div class="header-actions">
+      <a class="btn-ghost" href="#" id="openHelp">How it works</a>
     </div>
-  </header>
+  </div>
+</header>
 
   <main class="container">
     <section class="hero">
