Update title and brand name to 'Festivals'

--- a/festival.html
+++ b/festival.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Concerto — Festival</title>
+  <title>Concerto Festivals</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 
       <div class="brand">
         <div class="brand-kicker">CONCERTO</div>
-        <div class="brand-title" id="festivalTitle">FESTIVAL</div>
+        <div class="brand-title" id="festivalTitle">FESTIVALS</div>
       </div>
 
       <div class="topbar-actions">
