--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       class="brand-logo"
     />
 
-    <h1 class="feature-title">Festivals</h1>
+    <h1 class="feature-title"> Concerto Festivals</h1>
     <p class="tagline">
       Find your festival. Plan the whole weekend.
     </p>
