--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
    <section class="hero">
   <div class="search-row">
     <div class="search">
-      <input id="q" type="search" placeholder="Search festivals (ex: Coachella, Miami, EDM)..." autocomplete="off" />
+      <input id="q" type="search" placeholder="Search Festivals" autocomplete="off" />
       <button id="clearBtn" class="icon-btn" title="Clear" aria-label="Clear">×</button>
     </div>
 
     <select id="month" class="select">
-      <option value="all">All months</option>
+      <option value="all">All Months</option>
     </select>
 
     <select id="genre" class="select">
-      <option value="all">All genres</option>
+      <option value="all">All Genres</option>
     </select>
   </div>
 
@@ -51,7 +51,7 @@
 
     <section class="grid-wrap">
       <div class="grid-head">
-        <div class="muted" id="countLabel">Loading festivals…</div>
+        <div class="muted" id="countLabel">Loading Festivals…</div>
         <div class="right">
           <button class="pill-btn" id="sortBtn" data-sort="soonest">Sort: Soonest</button>
         </div>
@@ -69,13 +69,13 @@
   <div class="modal" id="modal" hidden>
     <div class="modal-backdrop" id="modalClose"></div>
     <div class="modal-card">
-      <div class="modal-title">How Festivals works</div>
+      <div class="modal-title">How Festivals Works</div>
       <div class="modal-body">
         <ul class="bullets">
-          <li>Browse or search festivals.</li>
-          <li>Tap a festival card to open the details page.</li>
-          <li>Use the buttons to jump to tickets and planning tools.</li>
-          <li>We’ll connect this to Concerto’s City Guides + AI itineraries next.</li>
+          <li>Browse or Search Festivals.</li>
+          <li>Tap a Festival Card to Open the Details Page.</li>
+          <li>Use the Buttons to Jump to Tickets and Planning Tools.</li>
+          <li>We’ll Connect You to Concerto’s City Guides and More.</li>
         </ul>
       </div>
       <div class="modal-actions">
