--- a/festival.html
+++ b/festival.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="topbar-actions">
-        <a class="ghost-btn" id="officialBtn" href="#" target="_blank" rel="noopener">Official</a>
+        <a class="ghost-btn" id="officialBtn" href="#" target="_blank" rel="noopener">Website</a>
       </div>
     </div>
   </header>
