--- a/festival.html
+++ b/festival.html
@@ -20,10 +20,13 @@
     <div class="topbar-inner">
       <a class="ghost-btn" href="index.html">← Back</a>
 
-      <div class="brand">
-        <div class="brand-kicker">CONCERTO</div>
-        <div class="brand-title" id="festivalTitle">FESTIVALS</div>
-      </div>
+ <div class="brand">
+  <img 
+    src="assets/images/concerto-logo.png" 
+    alt="Concerto" 
+    class="brand-logo"
+  />
+</div>
 
       <div class="topbar-actions">
         <a class="ghost-btn" id="officialBtn" href="#" target="_blank" rel="noopener">Website</a>
