--- a/festival.html
+++ b/festival.html
@@ -22,7 +22,7 @@
 
  <div class="brand">
   <img 
-    src="assets/images/concerto-logo.png" 
+    src="concerto-festivals/img_3180.jpeg" 
     alt="Concerto" 
     class="brand-logo"
   />
