--- a/festival.html
+++ b/festival.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+First question before we dive in here, what in this html is making the Concerto Festival at the top? It need to be the Concerto logo. HTML: <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -20,13 +20,10 @@
     <div class="topbar-inner">
       <a class="ghost-btn" href="index.html">← Back</a>
 
- <div class="brand">
-  <img 
-    src="IMG_3180.jpeg" 
-    alt="Concerto" 
-    class="brand-logo"
-  />
-</div>
+      <div class="brand">
+        <div class="brand-kicker">CONCERTO</div>
+        <div class="brand-title" id="festivalTitle">FESTIVALS</div>
+      </div>
 
       <div class="topbar-actions">
         <a class="ghost-btn" id="officialBtn" href="#" target="_blank" rel="noopener">Website</a>
