--- a/festival.html
+++ b/festival.html
@@ -19,10 +19,11 @@
     <div class="topbar-inner">
       <a class="ghost-btn" href="index.html">← Back</a>
 
-      <div class="brand">
-        <div class="brand-kicker">CONCERTO</div>
-        <div class="brand-title" id="festivalTitle">FESTIVALS</div>
-      </div>
+  <div class="brand">
+  <img id="festivalBrandLogo" alt="" style="display:none;height:26px;max-width:160px;object-fit:contain;" />
+  <div class="brand-kicker" id="brandKicker">CONCERTO</div>
+  <div class="brand-title" id="festivalTitle">FESTIVALS</div>
+</div>
 
       <div class="topbar-actions">
         <a class="ghost-btn" id="officialBtn" href="#" target="_blank" rel="noopener">Website</a>
