--- a/festival.html
+++ b/festival.html
@@ -19,9 +19,14 @@
     <div class="topbar-inner">
       <a class="ghost-btn" href="index.html">← Back</a>
 
-  <div class="brand">
-  <img id="festivalBrandLogo" alt="" style="display:none;height:26px;max-width:160px;object-fit:contain;" />
-  <div class="brand-kicker" id="brandKicker">CONCERTO</div>
+<div class="brand brand--logo">
+  <img
+    id="topbarLogo"
+    src="IMG_3180.jpeg"
+    alt="Concerto"
+    class="topbar-logo"
+  />
+  <div class="brand-kicker">CONCERTO</div>
   <div class="brand-title" id="festivalTitle">FESTIVALS</div>
 </div>
 
