--- a/festival.html
+++ b/festival.html
@@ -19,16 +19,10 @@
     <div class="topbar-inner">
       <a class="ghost-btn" href="index.html">← Back</a>
 
-<div class="brand brand--logo">
-  <img
-    id="topbarLogo"
-    src="IMG_3180.jpeg"
-    alt="Concerto"
-    class="topbar-logo"
-  />
-  <div class="brand-kicker">CONCERTO</div>
-  <div class="brand-title" id="festivalTitle">FESTIVALS</div>
-</div>
+      <div class="brand">
+        <div class="brand-kicker">CONCERTO</div>
+        <div class="brand-title" id="festivalTitle">FESTIVALS</div>
+      </div>
 
       <div class="topbar-actions">
         <a class="ghost-btn" id="officialBtn" href="#" target="_blank" rel="noopener">Website</a>
