--- a/festival.html
+++ b/festival.html
@@ -20,11 +20,8 @@
       <a class="ghost-btn" href="index.html">← Back</a>
 
 <div class="brand">
-  <img
-    class="brand-logo"
-    src="IMG_3180.jpeg"
-    alt="Concerto"
-  />
+  <div class="brand-kicker">CONCERTO</div>
+  <div class="brand-title" id="festivalTitle">FESTIVALS</div>
 </div>
 
       <div class="topbar-actions">
